<resources>
    <string name="app_name">TechnoHand</string>
    <string name="sing_in">Sing in</string>
    <string name="sing_up">Sing Up</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="name">Username</string>
    <string name="confirm_password">Confirm password</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->

</resources>