<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@mipmap/sing_up_background"
    tools:context=".SingUp">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/name">
    </EditText>

    <EditText
        android:id = "@+id/email_sing_up"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:text="@string/email"
        android:layout_marginTop="20dp"
        android:inputType = "textEmailAddress" />

    <EditText
        android:id = "@+id/password_sing_up"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:text="@string/password"
        android:layout_marginTop="20dp" />

    <EditText
        android:id = "@+id/password_confirm"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:text="@string/confirm_password"
        android:layout_marginTop="20dp" />

    <Button
        android:id="@+id/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"

        android:text="ok"/>

</LinearLayout>