<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@mipmap/tech_background"
    tools:context=".LogIn">
    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@mipmap/love_hand"/>
    <EditText
        android:id = "@+id/email"
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:text="@string/email"
        android:theme="@color/primaryColor"
        android:layout_marginTop="20dp"
        android:inputType = "textEmailAddress" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">
        <EditText
            android:id = "@+id/password"
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content"
            android:text="@string/password"
            android:theme="@color/primaryColor"
            android:inputType = "textPassword" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="show"/>

    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/sing_in"/>

    <Button
        android:id="@+id/sing_up_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/sing_up"/>
</LinearLayout>